@@ -53,7 +53,7 @@
     </THEAD>
     <TBODY>
 	{foreach from=$divisions item=division}{if $division.list}
-	<TR>
+	<TR class="dark">
 		<TD colspan="4">
 		    <IMG src="img/division.gif" alt=""> <B>{$division.name}</B>
 		</TD>
@@ -80,24 +80,13 @@
 			    {$customerlist.$cust.customername}
 			{/if}
 		    </TD>
-		    <TD ALIGN="LEFT">
-			{$item.description}
-		    </TD>
-		    <TD ALIGN="RIGHT" COLSPAN="2" NOWRAP>
-			{if !$item.customerid}
-			<SELECT NAME="customer[{$item.id}]" {tip text="Select customer" trigger=$item.id} onChange="document.forms['cashimport'].elements['custid[{$item.id}]'].value=document.forms['cashimport'].elements['customer[{$item.id}]'].value">
-				<OPTION VALUE="0">{trans("- select customer -")}</OPTION>
-				{foreach from=$customerlist item=customer}
-				<OPTION VALUE="{$customer.id}" {if $customer.id == $item.customerid}SELECTED{/if}>{$customer.customername|truncate:60:"...":true} ({$customer.id|string_format:"%04d"})</OPTION>
-				{/foreach}
-			</SELECT>&nbsp;
-			<INPUT type="text" name="custid[{$item.id}]" value="{if $custid[{$item.id}]}{$custid[{$item.id}]}{/if}" size="5"{if $customerlist} onChange="reset_customer({$item.id})" onfocus="reset_customer({$item.id})"{/if} {tip text="Enter customer ID" trigger="custid"}>
-			<a href="javascript: void(0);" onClick="return customerchoosewin(document.cashimport.elements['custid[{$item.id}]']);" {tip text="Click to search customer"}>{trans("Search")}&nbsp;&raquo;&raquo;&raquo;</A>
-			{else}
-			<INPUT TYPE="hidden" NAME="customer[{$item.id}]" VALUE="{$item.customerid}">
-			{/if}
-			<INPUT TYPE="checkbox" NAME="marks[{$item.id}]" VALUE="{$item.id}">
-		</TD>
+			<TD class="text-left">
+				{$item.description}
+			</TD>
+			<TD class="text-right nobr" colspan="2">
+				{customerlist form="cashimport" customers=$customerlist selected=$item.customerid selectname="customer[{$item.id}]" inputname="custid[{$item.id}]"}
+				<INPUT TYPE="checkbox" NAME="marks[{$item.id}]" VALUE="{$item.id}">
+			</TD>
 	    </TR>
 	    {/foreach}
 	{/if}{/foreach}
@@ -112,14 +101,17 @@
 	{/if}
     </TBODY>
     <TFOOT>
-	<TR>
-		<TD COLSPAN="3" nowrap>
-			<INPUT TYPE="checkbox" NAME="allbox" id="allbox" onchange="CheckAll('cashimport', this)" VALUE="1"><label for="allbox">{trans("Check All")}</label>
+	<TR class="dark">
+		<TD class="nobr" colspan="3">
+			<label>
+				<INPUT type="checkbox" name="allbox" onchange="CheckAll('cashimport', this)" value="1">
+				{trans("Check All")}
+			</label>
 		</TD>
-		<TD COLSPAN="2" ALIGN="center" nowrap>
-		    <A href="?m=cashimport&action=txt">{trans("Download all (TXT)")} <IMG src="img/save.gif" alt="">
+		<TD class="text-center nobr" colspan="2">
+			<A href="?m=cashimport&action=txt">{trans("Download all (TXT)")} <IMG src="img/save.gif" alt="">
 		</TD>
-		<TD COLSPAN="2" align="right" nowrap>
+		<TD class="text-right nobr" colspan="2">
 			<A HREF="javascript:Delete();">{trans("Delete")} <IMG src="img/delete.gif" ALT=""></A>
 			<A HREF="javascript:Save();">{trans("Save")} <IMG src="img/save.gif" ALT=""></A>
 			<A HREF="javascript:document.cashimport.submit();">{trans("<!do>Import")} <IMG src="img/save.gif" ALT=""></A>
